kubernetes/details-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: details
  template:
    metadata:
      labels:
        app: details
    spec:
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"
      containers:
        - name: details
          image: istio/examples-bookinfo-details-v2
          ports:
            - containerPort: 9080
