kubernetes/productpage-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      labels:
        app: productpage
    spec:
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"      
      containers:
        - name: productpage
          image: istio/examples-bookinfo-productpage-v1
          ports:
            - containerPort: 9080
