kubernetes/ratings-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"
      containers:
        - name: ratings
          image: docker.io/istio/examples-bookinfo-ratings-v2:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
