kubernetes/reviews-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - node02
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "value"
        effect: "NoSchedule"
      containers:
        - name: reviews
          image: istio/examples-bookinfo-reviews-v2
          ports:
            - containerPort: 9080
