kubernetes/details-service.yml
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: backend
  labels:
    app: details
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
