kubernetes/productpage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: frontend
  labels:
    app: productpage
    service: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
