kubernetes/ratings-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: backend
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
