kubernetes/reviews-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: backend
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
